# finalfusion-inspector

./: .gitignore  Cargo.toml  README.md  finalfusion-inspector  finalfusion-inspector.spec  inspectorwindow.py  setup.py  shell.nix  similarity.py  ui_analogywidget.py  ui_inspectorwindow.py  ui_inspectorwindow.ui  ui_similaritywidget.py  ui_similaritywidget.ui
.github/workflows/: rust.yml
finalfusion_inspector/: __main__.py  inspectorwindow.py  metadata.py  similarity.py  subwords.py  ui_analogywidget.ui  ui_inspectorwindow.py  ui_inspectorwindow.ui  ui_metadatadialog.py  ui_metadatadialog.ui  ui_similaritywidget.ui  ui_subwordswidget.py  ui_subwordswidget.ui  ui_wordsetswidget.py  ui_wordsetswidget.ui  util.py  validators.py  word_sets.py
nix/: sources.json
resources/: finalfusion.icns
src/: analogy_widget.glade  analogy_widget.rs  embeddings_ext.rs  inspector_window.glade  inspector_window.rs  main.rs  metadata_dialog.rs  metadata_model.rs  model.rs  similarity.rs  similarity_model.rs  similarity_widget.glade  similarity_widget.rs
src/models/: metadata_model.rs  mod.rs  similarity_model.rs  subwords_model.rs
src/ui/: analogy_widget.glade  analogy_widget.rs  basic_dialogs.rs  inspector_window.glade  inspector_window.rs  metadata_dialog.glade  metadata_dialog.rs  mod.rs  similarity_widget.glade  similarity_widget.rs  subwords_widget.glade  subwords_widget.rs
