[package]
name = "finalfusion-inspector"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Utility for inspecting finalfusion embeddings"
documentation = "https://github.com/finalfusion/finalfusion-inspector"
homepage = "https://github.com/finalfusion/finalfusion-inspector"
repository = "https://github.com/finalfusion/finalfusion-inspector"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "LICENSE.md"

exclude = [
  ".gitignore",
  ".github",
  "shell.nix"
]

[dependencies]
clap = "2"
finalfusion = "0.12"
stdinout = "0.4"
toml = "0.5"

[dependencies.gtk]
version = "0.8"
features = ["v3_16"]

[dependencies.gio]
version = "0.8"
features = ["v2_44"]